deployment/crm/crm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-deployment
  labels:
    app: crm-app
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: crm-app
  template:
    metadata:
      labels:
        app: crm-app
    spec:
      containers:
        - name: crm-app
          image: unkindledone/crm_service:latest
          ports:
            - containerPort: 8083
              name: crm-app
          livenessProbe:
            httpGet:
              port: 8083
              path: /actuator/health/liveness
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 8083
              path: /actuator/health/readiness
            failureThreshold: 1
            periodSeconds: 10
