deployment/crm/crm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-service
spec:
  selector:
    app: crm-app
  ports:
    - protocol: TCP
      name: web
      port: 8083
      targetPort: 8083
  type: ClusterIP
